--- a/src/lib/styles/style.scss
+++ b/src/lib/styles/style.scss
@@ -1,7 +1,7 @@
 body {
     margin: 0;
-    background: #eee;
-    color: #333;
+    background-color: var(--fds-solid-background-base);
+    color: var(--fds-text-primary);
     font-family: sans-serif;
   }
   
@@ -10,7 +10,7 @@ body {
     margin: 2rem auto;
     max-width: 40rem;
   }
-
+  
   :where(h2, h3, h4, h5, h6) {
     .icon-link {
       position: relative;
