--- a/src/lib/styles/style.css
+++ b/src/lib/styles/style.css
@@ -1242,6 +1242,8 @@ center {
     100% { -webkit-transform: translateY(-10px); transform: translateY(-10px); }
 }
 
+/*blog content */
+
 .blog_content{
 
     padding: 0 15px;
@@ -1269,7 +1271,6 @@ center {
 .blog_content_post{
 	color: gray;
 	text-align: left;
-	
 }
 
 .blog_content img, video {
@@ -1280,8 +1281,6 @@ center {
     max-height: 900px;
 }
 
-
-
 @media (max-width: 768px) {
     .blog_content img, video {
         max-width: 100%;
@@ -1289,3 +1288,67 @@ center {
     }
 }
 
+/*blog index */
+
+.blogs_index{
+	padding-top: 100px;
+	padding-bottom: 150px;
+
+}
+.blog_index_subtitle{
+	padding-top: 10px;
+	padding-bottom:30px;
+}
+
+.blogs_section_box {
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+	height: 100%;
+    grid-template-rows: auto;
+    grid-template-areas: ". .";
+	gap: 24px 24px;
+	
+
+} 
+@media (max-width: 768px) {
+.blogs_section_box {
+    grid-template-columns: 1fr;
+    grid-template-areas: ".";
+	}
+}
+
+.home_section_single_box_main {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	padding: 22px 16px;
+	position: relative;
+	
+  } 
+
+  .home_section_single_box_topic{
+	padding-top: 20px;
+	color: white;
+  }
+  
+  .home_section_single_box_published {
+	padding-top: 20px;
+	color: #E5E4E2 
+  }
+
+  .home_section_single_box_figure img {
+	width: 100%;
+  }
+
+
+  .blogs-colour {
+	background-color: rgba(127,75,163,1);
+}
+
+
+ 
