--- a/src/lib/styles/style.css
+++ b/src/lib/styles/style.css
@@ -850,10 +850,10 @@ header.navbar {
 	margin-top: 4rem;
 }
 .blog_details p a{
-	color: #fff;
+	color: var(--yellow)
 }
 .blog_details p a:hover{
-	color: var(--yellow);
+	color: var(--pink)
 }
 .blog_details h2{
 	font-size: 4rem;
